--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "Portfolio | Moon",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "Portfolio | Moon",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "MOQN",
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@fontsource/merriweather": "^5.0.8",
-    "@fontsource-variable/montserrat": "^5.0.17",
+    "@fontsource/noto-sans-mono": "^5.1.0",
+    "@fontsource/raleway": "^5.1.0",
+    "@fontsource/roboto-slab": "^5.1.0",
     "gatsby": "^5.14.0",
     "gatsby-plugin-feed": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
@@ -28,14 +29,14 @@
   "devDependencies": {
     "prettier": "^2.8.8"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://moonjunghyun.com/",
   "keywords": [
     "gatsby"
   ],
   "license": "0BSD",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/MOQN/moqn-net.git"
   },
   "scripts": {
     "build": "gatsby build",
